@@ -44,6 +44,7 @@
 - (void) GSSetSurface: (CairoSurface *)surface : (int)x : (int)y;
 
 - (void) showPage;
+- (BOOL) supportsDrawGState;
 @end
 
 #endif
